--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -32,7 +32,11 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
+                    {% if user %}
+                        <a class="nav-link" href="/dashboard">Dashboard</a>
+                    {% else %}
                         <a class="nav-link" href="/login">Admin Login</a>
+                    {% endif %}
                     </li>
                 </ul>
             </div>
